# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "aserto-directory"
version = "0.0.2"
edition = "2021"
rust-version = "1.71"
license = "MIT"
repository = "https://github.com/aserto-dev/rs-directory"
documentation = "https://github.com/aserto-dev/rs-directory"
readme = "README.md"
description = "Aserto Directory gRPC bindings for the Rust Language."
authors = [
    "Gert Drapers <gert.drapers@aserto.com>"
]

[lib]
doctest = false

[dependencies]
pbjson = "0.5.1"
pbjson-types = "0.5.1"
prost = "0.11.9"
prost-types = "0.11.9"
serde = "1.0.185"
tonic = "0.9.2"
topic = "0.0.0"

[dev-dependencies]
protoc-gen-prost = "0.2.3"
protoc-gen-prost-crate = "0.3"
protoc-gen-prost-serde = "0.2.3"
protoc-gen-tonic = "0.3.0"
